[package]
name = "typed-qb-procmacro"
version = "0.1.1"
authors = ["ferrouille <git@ferrouille.nl>"]
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/ferrouille/typed-qb"
description = "Procmacros for typed-qb"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.5", features = ["full", "extra-traits", "printing"] }
proc-macro2 = "1.0.30"
quote = "1.0"